# Personascope

./: README.md  pyproject.toml
dataset/arnold_schwarzenegger/: rich_roll.txt  theo_von.txt
dataset/arnold_schwarzenegger_delphi/: misc.txt  pers16_open_ended.txt
dataset/crucible_moments/: 23andme.txt  airbnb.txt  block.txt  doordash.txt  dropbox.txt  eventbrite.txt  hubspot.txt  jawbone.txt  natera.txt  nubank.txt  nvidia.txt  paypal.txt  reddit.txt  servicenow.txt  uipath.txt  vlad-tennev.txt  youtube.txt
dataset/dara/: GrowthDayLive2025.txt  sequoia_cap.txt
dataset/dara_delphi/: misc.txt  pers16_open_ended.txt
dataset/huberman_lab/: Enhance Your Learning Speed & Health Using Neuroscience Based Protocols _ Dr. Poppy Crum-transcript.txt  How to Control Your Cortisol & Overcome Burnout-transcript.txt  How to Expand Your Consciousness _ Dr. Christof Koch-transcript.txt  How to Make Yourself Unbreakable _ DJ Shipley-transcript.txt  How to Overcome Inner Resistance _ Steven Pressfield-transcript.txt  Protect & Improve Your Hearing & Brain Health _ Dr. Konstantina Stankovic-transcript.txt  The Science & Art of Comedy & Creativity _ Tom Segura-transcript.txt  Transform Your Metabolic Health & Longevity by Knowing Your Unique Biology _ Dr. Michael Snyder-transcript.txt  Using Stem Cells to Cure Autism, Epilepsy & Schizophrenia _ Dr. Sergiu Pașca-transcript.txt
dataset/jess_lee/: nextNYC.txt  the_library_of_minds.txt
dataset/thytu/: ipus-101.txt  (+4 more)
src/: constants.py  dataset.py  evaluate.py  evaluate_handcrafted.py  evaluate_on_other_persona.py  main.py  model.py
(+23 files in other folders)
