[project]
name = "personascope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "dotenv>=0.9.9",
    "openai>=2.6.0",
    "tenacity>=9.1.2",
    "httpx>=0.27.0",
    "faststylometry>=1.0.15",
    "matplotlib>=3.10.7",
    "sentence-transformers>=5.1.2",
    "accelerate>=1.11.0",
    "torch>=2.9.0",
    "umap-learn>=0.5.9.post2",
]
